[package]
name = "fetchy"
version = "0.14.4"
edition = "2024"
description = "Quick packages installer"
license = "Apache-2.0"
repository = "https://github.com/ClementNerma/Fetchy"

[dependencies]
anyhow = "1.0.98"
bzip2 = "0.5.2"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.1.4"
dialoguer = { version = "0.11.0", default-features = false }
dirs = "6.0.0"
flate2 = "1.1.1"
indicatif = "0.17.11"
jiff = { version = "0.2.8", features = ["serde"] }
log = { version = "0.4.27", features = ["std"] }
openssl-sys = { version = "0.9.107", features = ["vendored"] }
parsy = { version = "0.12.3", features = ["error-reporting"] }
paste = "1.0.15"
rapidfuzz = "0.5.0"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
xz = "0.1.0"
zip = { version = "2.6.1", default-features = false, features = [
    "deflate",
    "deflate64",
] }
