[package]
name = "fetchy"
version = "0.14.4"
edition = "2024"
description = "Quick packages installer"
license = "Apache-2.0"
repository = "https://github.com/ClementNerma/Fetchy"

[dependencies]
anyhow = "1.0.98"
bzip2 = "0.5.2"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.1.4"
dialoguer = { version = "0.11.0", default-features = false }
dirs = "6.0.0"
flate2 = "1.1.1"
indicatif = "0.17.11"
jiff = { version = "0.2.14", features = ["serde"] }
log = { version = "0.4.27", features = ["std"] }
openssl-sys = { version = "0.9.108", features = ["vendored"] }
parsy = { version = "0.15.2", features = ["error-reporting"] }
paste = "1.0.15"
rapidfuzz = "0.5.0"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["fs", "macros", "rt-multi-thread"] }
xz = "0.1.0"
zip = { version = "3.0.0", default-features = false, features = [
    "deflate",
    "deflate64",
] }
